[tool.poetry]
name = "my-custom-airflow-components"
version = "0.1.0"
description = ""
authors = ["Uziel Linares <uziel.linares@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.3.3"
apache-airflow-providers-postgres = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
