[tool.poetry]
name = "custom-airflow-components"
version = "0.1.0"
description = ""
authors = ["Uziel Linares <uziel.linares@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.3.3"
apache-airflow-providers-postgres = "^5.1.0"
apache-airflow-providers-microsoft-azure = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
